Prevent flex overflow and remove table override

--- a/resources/scss/admin/_content.scss
+++ b/resources/scss/admin/_content.scss
@@ -1,5 +1,6 @@
 .content {
     width: 100%;
+    min-width: 0;
     display: flex;
     flex-direction: column;
     height: calc(100dvh - var(--typicms-navbar-height));
