--- a/resources/scss/admin/_item-list-table.scss
+++ b/resources/scss/admin/_item-list-table.scss
@@ -1,6 +1,3 @@
-.table-responsive {
-    overflow: visible;
-}
 .item-list-table {
     thead {
         position: sticky;
